[package]
name = "common"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
image = "*"
tokio-postgres = {version = "0.4.0-rc.2", features = ["with-chrono-0_4"]}
url = "*"
hyper = "*"
http = "*"
futures = "*"
log = "*"
fern = "*"
failure = "*"
regex = "*"
serde = {version = "*", features = ["derive"]}
r2d2_postgres = "0.15.0-rc.1"
chrono = "*"
