[package]
name = "hasher"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[features]
default = ["error_lines"]
error_lines = []

[dependencies]
futures = "*"
hyper = "*"
hyper-tls = "*"
image = "*"
regex = "*"
reqwest = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = "*"
postgres = {version = "0.16.0-rc.1", features = ["with-chrono-0_4"]}
url = "*"
common = {path = "../common"}
http = "*"
failure = "*"
chrono = "*"
log = "*"
fern = "*"
lazy_static = "*"
r2d2_postgres = "0.15.0-rc.1"
fallible-iterator = "*"
