[package]
name = "hasher"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[features]
default = ["error_lines"]
error_lines = []

[dependencies]
image = "*"
reqwest = "*"
serde_json = "*"
postgres = {version = "0.16.0-rc.1", features = ["with-chrono-0_4"]}
common = {path = "../common"}
chrono = "*"
log = "*"
fern = "*"
lazy_static = "*"
r2d2_postgres = "0.15.0-rc.1"
rayon = "*"
