[package]
name = "ingest"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"
description = "Tool for automatically ingesting PushShift downloads"

[dependencies]
zstd = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = "*"
postgres = {version = "0.16.0-rc.1", features = ["with-chrono-0_4"]}
clap = "*"
common = {path = "../common"}
lazy_static = "*"
tokio = "*"
r2d2_postgres = "0.15.0-rc.1"
futures = "*"
log = "*"
hyper = "*"
hyper-tls = "*"
