[package]
name = "site"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "*"
postgres = "0.16.0-rc.1"
askama = {version = "*", features = ["with-gotham"]}
reqwest = "*"
url = "*"
warp = "*"
serde = {version = "*", features = ["derive"]}
http = "*"
common = {path = "../common"}
hyper-tls = "*"
failure = "*"
futures = "*"
fallible-iterator = "*"
r2d2_postgres = "0.15.0-rc.1"

[build-dependencies]
askama = {version = "*", features = ["with-gotham"]}
