[package]
name = "all"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
reqwest = "0.11.12"
tokio = "1.21.2"
once_cell = "1.15.0"
chrono = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
futures = "0.3.24"
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
tracing-futures = "0.2.5"
hyper = "0.14.20"
url = "2.3.1"
