[package]
name = "common"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
cache_control = { path = "../cache_control" }
chrono = { version = "0.4.7", features = ["serde"] }
failure = "0.1.5"
fern = "0.5.8"
lazy_static = "1.3.0"
log = "0.4.6"
regex = "1.1.6"
serde = { version = "1.0.92", features = ["derive"] }
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", features = ["with-chrono-0_4"] }
toml = "0.5.1"
url = "1.7.2"
image = "0.22.2"
tokio = "0.2.0-alpha.6"
serde_json = "1.0.40"
futures-preview = "0.3.0-alpha.19"
reqwest = { version = "0.10.0-alpha.1", features = ["gzip", "json"] }
bytes = "0.4.12"
