[package]
name = "common"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
cache_control = { path = "../cache_control" }
chrono = { version = "0.4.7", features = ["serde"] }
failure = "0.1.5"
fern = "0.5.8"
log = "0.4.6"
regex = "1.1.6"
serde = { version = "1.0.92", features = ["derive"] }
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
toml = "0.5.1"
url = "2.1.0"
image = "0.22.2"
tokio = { version = "0.2.6", features = ["full"] }
serde_json = "1.0.40"
futures = "0.3.1"
reqwest = { version = "0.10.0-alpha.1", features = ["gzip", "json"] }
bytes = "0.5.3"
percent-encoding = "2.1.0"
ron = "0.5.1"
once_cell = "1.2.0"
deadpool-postgres = "0.5.2"
tracing = "0.1.12"
tracing-futures = "0.2.1"
