[package]
name = "common"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
cache_control = { path = "../cache_control" }
chrono = { version = "0.4.22", features = ["serde"] }
failure = "0.1.8"
fern = "0.6.1"
log = "0.4.17"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
toml = "0.5.9"
url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0.85"
futures = "0.3.24"
reqwest = { version = "0.11.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
bytes = "1.2.1"
percent-encoding = "2.2.0"
ron = "0.8.0"
once_cell = "1.15.0"
deadpool-postgres = {version = "0.10.2", features = ["serde", "rt_tokio_1"]}
tracing = "0.1.36"
tracing-futures = "0.2.5"
image = "0.24.4"
