[package]
name = "counter"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
chrono = "0.4.22"
tokio = { version = "1.21", features = ["full"] }
anyhow = "1.0.65"
dotenv = "0.15.0"
futures = "0.3.24"
