[package]
name = "direct"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
reqwest = "0.10.6"
tokio = "0.2.22"
once_cell = "1.4.0"
chrono = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
futures = "0.3.5"
tracing-subscriber = "0.2.9"
tracing = "0.1.17"
tracing-futures = "0.2.4"
hyper = "0.13.7"
url = "2.1.1"
