[package]
name = "direct"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = "0.2.22"
reqwest = "0.10.7"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.5"
tracing-futures = "0.2.4"
hyper = "0.13.7"
tracing-subscriber = "0.2.11"
