[package]
name = "direct"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = "1.21.2"
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.24"
tracing-futures = "0.2.5"
hyper = "0.14.20"
tracing-subscriber = "0.3.15"
