[package]
name = "hasher"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[features]
default = ["error_lines"]
error_lines = []

[dependencies]
reqwest = "0.9.17"
serde_json = "1.0.39"
postgres = { version = "0.16.0-rc.1", features = ["with-chrono-0_4"] }
common = {path = "../common"}
chrono = "0.4.6"
log = "0.4.6"
fern = "0.5.8"
lazy_static = "1.3.0"
r2d2_postgres = "0.15.0-rc.1"
rayon = "1.0.3"
