[package]
name = "ingest"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"
description = "Tool for automatically ingesting PushShift downloads"

[dependencies]
zstd = "0.4.24"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
clap = "2.33.0"
common = { path = "../common" }
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
log = "0.4.6"
bzip2 = "0.3.3"
xz2 = "0.1.6"
regex = "1.1.6"
failure = "0.1.5"
hyper = "0.13.1"
tokio = { version = "0.2.6", features = ["full"] }
futures = "0.3.1"
url = "2.1.0"
chrono = { version = "0.4.7", features = ["serde"] }
reqwest = {version = "0.10.0", features = ["gzip"]}
ron = "0.5.1"
once_cell = "1.2.0"
dashmap = "3.0.7"
tracing-subscriber = "0.2.0-alpha.4"
tracing = "0.1.12"
tracing-futures = "0.2.1"
