[package]
name = "ingest"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"
description = "Tool for automatically ingesting PushShift downloads"

[dependencies]
zstd = "0.11.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "4.0.10", features = ["derive"] }
common = { path = "../common" }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
log = "0.4.17"
bzip2 = "0.4.3"
xz2 = "0.1.7"
regex = "1.6.0"
failure = "0.1.8"
hyper = "0.14.20"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
url = "2.3.1"
chrono = { version = "0.4.22", features = ["serde"] }
reqwest = {version = "0.11.12", features = ["gzip"]}
ron = "0.8.0"
once_cell = "1.15.0"
dashmap = "5.4.0"
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
tracing-futures = "0.2.5"
flate2 = "1.0.24"
pin-project-lite = "0.2.9"
