[package]
name = "op"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde_json = "1.0.40"
serde = "1.0.98"
failure = "0.1.5"
tokio = "0.2.0-alpha.6"
futures-preview = "0.3.0-alpha.19"
common = { path = "../common" }
reqwest = { version = "0.10.0-alpha.1", features = ["gzip", "json"] }
chrono = "0.4.9"
ron = "0.5.1"
