[package]
name = "op"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde_json = "1.0.40"
serde = "1.0.145"
failure = "0.1.5"
tokio = { version = "0.2.6", features = ["full"] }
futures = "0.3.1"
common = { path = "../common" }
reqwest = { version = "0.10.0-alpha.1", features = ["gzip", "json"] }
chrono = "0.4.10"
ron = "0.5.1"
hash_trie = { path = "../hash_trie" }
tokio-postgres = "0.5.3"
