[package]
name = "op"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.10"
serde_json = "1.0.85"
serde = "1.0.145"
failure = "0.1.8"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
common = { path = "../common" }
reqwest = { version = "0.11.12", features = ["gzip", "json"] }
chrono = "0.4.22"
ron = "0.8.0"
hash_trie = { path = "../hash_trie" }
tokio-postgres = "0.7.7"
