[package]
name = "site"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
common = { path = "../common" }
serde = { version = "1.0.92", features = ["derive"] }
tera = "1.0.0-beta.7"
url = "2.1.0"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", features = ["with-chrono-0_4"] }
warp = { git = "https://github.com/seanmonstar/warp" }
futures-preview = "0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
once_cell = "1.2.0"
http = "0.1.19"
