[package]
name = "site"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
common = { path = "../common" }
serde = { version = "1.0.92", features = ["derive"] }
tera = "1.0.1"
url = "2.1.0"
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
warp = "0.2"
futures = "0.3.1"
tokio = "0.2.6"
once_cell = "1.2.0"
http = "0.2"
bytes = "0.5"
ron = "0.5.1"
regex = "1.3.4"
tracing-subscriber = "0.2.1"
