[package]
name = "site"
version = "0.0.1"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
common = { path = "../common" }
serde = { version = "1.0.145", features = ["derive"] }
tera = "1.17.1"
url = "2.3.1"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
warp = "0.3"
futures = "0.3.24"
tokio = "1.21.2"
once_cell = "1.15.0"
http = "0.2"
bytes = "1.2"
ron = "0.8.0"
regex = "1.6.0"
tracing-subscriber = "0.3.15"
