[package]
name = "stream"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.7", features = ["stream", "gzip"] }
bytes = "0.5.6"
futures = "0.3.5"
regex = "1.3.9"
once_cell = "1.4.0"
serde_json = "1.0.57"
chrono = "0.4.13"
tracing-subscriber = "0.2.9"
tracing = "0.1.17"
tracing-futures = "0.2.4"
hyper = "0.13.7"
