[package]
name = "stream"
version = "0.1.0"
authors = ["Elaina Martineau <elainamartineau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "0.11.12", features = ["stream", "gzip"] }
bytes = "1.2.1"
futures = "0.3.24"
regex = "1.6.0"
once_cell = "1.15.0"
serde_json = "1.0.85"
chrono = "0.4.22"
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
tracing-futures = "0.2.5"
hyper = "0.14.20"
